# nlp_project_template

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
